--- a/styles.css
+++ b/styles.css
@@ -4,32 +4,6 @@
     box-sizing: border-box;
   }
 
-/* Nav Style */
-  nav {
-    display: flex;
-    justify-content: space-between;
-    background-color: white;
-    align-items: center;
-    padding: 10px;
-  }
-
-  nav img {
-    width: 140px;
-    margin-left: 80px;
-  }
-
-  nav ul {
-    display: flex;
-  }
-
-  nav ul li {
-    list-style-type: none;
-    margin-right: 40px;
-    font-size: 13px;
-    font-weight: 600;
-    text-decoration: none;
-  }
-
   #main h4{
     color: grey;
   }
@@ -64,4 +38,40 @@
     color: rgb(31,150,223); 
     padding-top: 100px;
 }
-  
+
+/* Media Query */
+@media screen and (max-width: 768px) {
+  .navbar-brand img {
+    width: 106px;
+    height: 80px;
+  }
+
+  #main .images {
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    padding: 15px;
+  }
+  .imagetext {
+    flex-direction: column;
+  }
+  .imagetext2 {
+    flex-direction: column;
+  }
+  .imagetext3 {
+    flex-direction: column;
+  }
+  .imagetext img, .imagetext2 img, .imagetext3 img {
+    width: 85%;
+  }
+  .imagetext h2, .imagetext p, .imagetext2 h2, .imagetext2 p, .imagetext3 h2, .imagetext3 p{
+    flex-direction: column;
+    padding: 5px;
+  }
+  #Upcoming {
+    width: 100%;
+  }
+  #footer{
+    padding: 15px;
+}
+}
